fixing overflow error due to aos

--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ a {
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    overflow: hidden;
+    overflow: hidden;
 }
 
 img {
